--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
   </head>
   <body>
-    <h2><a href="/31Days/31Days">31 Days</a></h2>
+    <h2><a href="/31Days/">31 Days</a></h2>
   </body>
 </html>
