--- a/31DAYS/index.html
+++ b/31DAYS/index.html
@@ -4,10 +4,10 @@
 
   </head>
   <body>
-    <h2><a href="/31Days/">31 Days</a></h2>
+    <h2><a href="/31DAYS/">31 Days</a></h2>
 
     <ul>
-      <li><a href="DAY_01/">/DAY 1 - Variation Goldberg Aria Visualization</a></li> 
+      <li><a href="/31DAYS/DAY_01/code/">/DAY 1 - Variation Goldberg Aria Visualization</a></li> 
     </ul>
   </body>
 </html>
