--- a/31DAYS/DAY_02/code/index.html
+++ b/31DAYS/DAY_02/code/index.html
@@ -1,5 +1,17 @@
 <html>
   <head>
+  <style type="text/css">
+    canvas {
+     -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      outline: none;
+      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    }
+  </style>
     <script src="libs/processing.min.js"></script>
   <script src="libs/MIDI.js/js/MIDI/AudioDetect.js" type="text/javascript"></script>
   <script src="libs/MIDI.js/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
