--- a/31DAYS/index.html
+++ b/31DAYS/index.html
@@ -8,6 +8,7 @@
 
     <ul>
       <li><a href="/31DAYS/DAY_01/code/">/DAY 1 - Variation Goldberg Aria Visualization</a></li> 
+      <li><a href="/31DAYS/DAY_02/code/">/DAY 2 - Circular circles sequencer</a></li> 
     </ul>
   </body>
 </html>
