--- a/31DAYS/DAY_02/code/index.html
+++ b/31DAYS/DAY_02/code/index.html
@@ -13,17 +13,7 @@
     }
   </style>
     <script src="libs/processing.min.js"></script>
-  <script src="libs/MIDI.js/js/MIDI/AudioDetect.js" type="text/javascript"></script>
-  <script src="libs/MIDI.js/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
-  <script src="libs/MIDI.js/js/MIDI/Plugin.js" type="text/javascript"></script>
-  <script src="libs/MIDI.js/js/MIDI/Player.js" type="text/javascript"></script>
-  <script src="libs/MIDI.js/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="libs/MIDI.js/inc/Base64.js" type="text/javascript"></script>
- <script src="libs/MIDI.js/inc/base64binary.js" type="text/javascript"></script>
- <script src="libs/MIDI.js/inc/jasmid/stream.js"></script>
- <script src="libs/MIDI.js/inc/jasmid/midifile.js"></script>
- <script src="libs/MIDI.js/inc/jasmid/replayer.js"></script>
+ <script src="libs/soundjs-0.5.2.min.js"></script>
   </head>
   <body>
     <p>
